kustomize/components/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    matchLabels:
      component: nextcloud
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: nextcloud
    spec:
      containers:
        - image: qusp66/nextcloud
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-persistent-storage
      restartPolicy: Always
      volumes:
        - name: nextcloud-persistent-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
