kustomize/components/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    component: nextcloud
spec:
  ports:
    - port: 80
  selector:
    component: nextcloud
