kustomize/components/nextcloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  ingressClassName: nginx
  rules:
    - host: nextcloud.hbvu.local
      http:
        paths:
          - path: /           
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
